--- a/RaindropsApp/RaindropsWPF/MainWindow.xaml
+++ b/RaindropsApp/RaindropsWPF/MainWindow.xaml
@@ -1,16 +1,11 @@
 ﻿<Window x:Class="RaindropsWPF.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="Raindrops" Height="300" Width="400">
-	<Border>
-		<Border.Background>
-			<ImageBrush x:Name="BackgroundImage"
-						Stretch="UniformToFill"/>
-		</Border.Background>
-
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		mc:Ignorable="d"
+        Title="Raindrops" Height="350" Width="400">
+	<Border Background="#93A7AA">
 		<StackPanel Margin="20">
 			<TextBlock Margin="5"
 					   FontSize="15"
@@ -30,7 +25,7 @@
 						 Width="100"
 						 Background="#C3D8E1"
 						 TextAlignment="Center"
-						 FontSize="15"/>
+						 FontSize="15" />
 
 				<Button x:Name="RainButton"
 						Margin="10"
@@ -40,7 +35,7 @@
 						FontSize="25"
 						Height="50"
 						Background="#7AA8C5"
-						Click="RainButton_Click"/>
+						Click="RainButton_Click" />
 			</Grid>
 
 			<TextBox x:Name="PPPTextBox"
@@ -51,18 +46,16 @@
 					 FontWeight="Bold"
 					 FontFamily="Verdana"
 					 Padding="5"
-					 />
-			
+					 IsReadOnly="True" />
+
 			<Expander Header="Explanation" IsExpanded="False">
-				
+				<StackPanel>
+					<Label>
+						<TextBlock x:Name="ExplanationTextBox"
+								   TextWrapping="Wrap" />
+					</Label>
+				</StackPanel>
 			</Expander>
-
-
 		</StackPanel>
-		
-		
-		
-		
 	</Border>
-	
 </Window>
